--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Frontend Mentor | Space Tourism</title>
 
     <link rel="stylesheet" href="index.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed:wght@400;700&family=Bellefair&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <main>
