Feat: Add numbered-title class

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <main>
-      <h1>Space Tourism!</h1>
+      <h1 class="numbered-title"><span>01</span>Pick your destination</h1>
     </main>
   </body>
 </html>
