Feat: Add large button component

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
   <body>
     <main>
       <h1 class="numbered-title"><span>01</span>Pick your destination</h1>
+
+      <a
+        href="#"
+        class="large-button uppercase fs-600 fm-serif text-black bg-white"
+        >Explore
+      </a>
     </main>
   </body>
 </html>
