Feat: Add underline-indicators utility class
- Utility class for navigation components that underlines when hovered/focused, to avoid code repetition
- Test first on the primary navigation

--- a/index.html
+++ b/index.html
@@ -24,6 +24,29 @@
         class="large-button uppercase fs-600 fm-serif text-black bg-white"
         >Explore
       </a>
+
+      <nav>
+        <ul
+          class="primary-navigation underline-indicators fm-sans-condensed flex"
+          style="--underline-gap: 3.2rem"
+        >
+          <li class="active">
+            <a class="uppercase text-white letter-spacing-2" href="#"
+              ><span aria-hidden="true">00</span>Active</a
+            >
+          </li>
+          <li>
+            <a class="uppercase text-white letter-spacing-2" href="#"
+              ><span aria-hidden="true">01</span>Hovered</a
+            >
+          </li>
+          <li>
+            <a class="uppercase text-white letter-spacing-2" href="#"
+              ><span aria-hidden="true">02</span>Idle</a
+            >
+          </li>
+        </ul>
+      </nav>
     </main>
   </body>
 </html>
