Feat: Add tab list component

--- a/index.html
+++ b/index.html
@@ -47,6 +47,42 @@
           </li>
         </ul>
       </nav>
+
+      <ul
+        class="tab-list underline-indicators flex"
+        style="--underline-gap: 1.2rem"
+      >
+        <li class="active">
+          <button
+            class="uppercase fs-300 text-primary letter-spacing-2"
+            href="#"
+            role="tab"
+            aria-selected="true"
+          >
+            Moon
+          </button>
+        </li>
+        <li>
+          <button
+            class="uppercase fs-300 text-primary letter-spacing-2"
+            href="#"
+            role="tab"
+            aria-selected="false"
+          >
+            Mars
+          </button>
+        </li>
+        <li>
+          <button
+            class="uppercase fs-300 text-primary letter-spacing-2"
+            href="#"
+            role="tab"
+            aria-selected="false"
+          >
+            Europa
+          </button>
+        </li>
+      </ul>
     </main>
   </body>
 </html>
