Feat: Add dot indicators component

--- a/index.html
+++ b/index.html
@@ -83,6 +83,18 @@
           </button>
         </li>
       </ul>
+
+      <div class="dot-indicators flex">
+        <button aria-selected="true">
+          <span class="sr-only">Slide title here</span>
+        </button>
+        <button aria-selected="false">
+          <span class="sr-only">Slide title here</span>
+        </button>
+        <button aria-selected="false">
+          <span class="sr-only">Slide title here</span>
+        </button>
+      </div>
     </main>
   </body>
 </html>
