Feat: Add numbered indicators component

--- a/index.html
+++ b/index.html
@@ -95,6 +95,30 @@
           <span class="sr-only">Slide title here</span>
         </button>
       </div>
+
+      <div class="numbered-indicators flex">
+        <button
+          class="fs-600 fm-serif"
+          aria-selected="true"
+          aria-label="slide title here"
+        >
+          1
+        </button>
+        <button
+          class="fs-600 fm-serif"
+          aria-selected="false"
+          aria-label="slide title here"
+        >
+          2
+        </button>
+        <button
+          class="fs-600 fm-serif"
+          aria-selected="false"
+          aria-label="slide title here"
+        >
+          3
+        </button>
+      </div>
     </main>
   </body>
 </html>
