Chore: Add favicon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frontend Mentor | Space Tourism</title>
 
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/favicon-32x32.png"
+    />
+
     <link rel="stylesheet" href="index.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -17,108 +24,7 @@
   </head>
   <body>
     <main>
-      <h1 class="numbered-title"><span>01</span>Pick your destination</h1>
-
-      <a
-        href="#"
-        class="large-button uppercase fs-600 fm-serif text-black bg-white"
-        >Explore
-      </a>
-
-      <nav>
-        <ul
-          class="primary-navigation underline-indicators fm-sans-condensed flex"
-          style="--underline-gap: 3.2rem"
-        >
-          <li class="active">
-            <a class="uppercase text-white letter-spacing-2" href="#"
-              ><span aria-hidden="true">00</span>Active</a
-            >
-          </li>
-          <li>
-            <a class="uppercase text-white letter-spacing-2" href="#"
-              ><span aria-hidden="true">01</span>Hovered</a
-            >
-          </li>
-          <li>
-            <a class="uppercase text-white letter-spacing-2" href="#"
-              ><span aria-hidden="true">02</span>Idle</a
-            >
-          </li>
-        </ul>
-      </nav>
-
-      <ul
-        class="tab-list underline-indicators flex"
-        style="--underline-gap: 1.2rem"
-      >
-        <li class="active">
-          <button
-            class="uppercase fs-300 text-primary letter-spacing-2"
-            href="#"
-            role="tab"
-            aria-selected="true"
-          >
-            Moon
-          </button>
-        </li>
-        <li>
-          <button
-            class="uppercase fs-300 text-primary letter-spacing-2"
-            href="#"
-            role="tab"
-            aria-selected="false"
-          >
-            Mars
-          </button>
-        </li>
-        <li>
-          <button
-            class="uppercase fs-300 text-primary letter-spacing-2"
-            href="#"
-            role="tab"
-            aria-selected="false"
-          >
-            Europa
-          </button>
-        </li>
-      </ul>
-
-      <div class="dot-indicators flex">
-        <button aria-selected="true">
-          <span class="sr-only">Slide title here</span>
-        </button>
-        <button aria-selected="false">
-          <span class="sr-only">Slide title here</span>
-        </button>
-        <button aria-selected="false">
-          <span class="sr-only">Slide title here</span>
-        </button>
-      </div>
-
-      <div class="numbered-indicators flex">
-        <button
-          class="fs-600 fm-serif"
-          aria-selected="true"
-          aria-label="slide title here"
-        >
-          1
-        </button>
-        <button
-          class="fs-600 fm-serif"
-          aria-selected="false"
-          aria-label="slide title here"
-        >
-          2
-        </button>
-        <button
-          class="fs-600 fm-serif"
-          aria-selected="false"
-          aria-label="slide title here"
-        >
-          3
-        </button>
-      </div>
+      <h1>Hello World!</h1>
     </main>
   </body>
 </html>
