Feat: Fix homepage layout
- Add page logo
- Set up grid layout for homepage
- Set font sizes for different screen sizes
- Change large button size depending on screen size

--- a/index.html
+++ b/index.html
@@ -22,9 +22,61 @@
       rel="stylesheet"
     />
   </head>
-  <body>
-    <main>
-      <h1>Hello World!</h1>
+
+  <body class="home">
+    <header class="primary-header flex">
+      <div>
+        <img src="./assets/shared/logo.svg" alt="space tourism logo" />
+      </div>
+
+      <!-- <nav>
+        <ul
+          class="primary-navigation underline-indicators fm-sans-condensed flex"
+          style="--underline-gap: 3.2rem"
+        >
+          <li class="active">
+            <a class="uppercase text-white letter-spacing-2" href="#"
+              ><span aria-hidden="true">00</span>Home</a
+            >
+          </li>
+          <li>
+            <a class="uppercase text-white letter-spacing-2" href="#"
+              ><span aria-hidden="true">01</span>Destination</a
+            >
+          </li>
+          <li>
+            <a class="uppercase text-white letter-spacing-2" href="#"
+              ><span aria-hidden="true">02</span>Crew</a
+            >
+          </li>
+          <li>
+            <a class="uppercase text-white letter-spacing-2" href="#"
+              ><span aria-hidden="true">02</span>Technology</a
+            >
+          </li>
+        </ul>
+      </nav> -->
+    </header>
+
+    <main class="grid-container grid-container--home">
+      <div>
+        <h1 class="uppercase letter-spacing-1 fs-500 fm-sans-condensed">
+          So, you want to travel to
+          <div class="text-white fs-900 fm-serif">Space</div>
+        </h1>
+        <p class="fm-sans">
+          Let’s face it; if you want to go to space, you might as well genuinely
+          go to outer space and not hover kind of on the edge of it. Well sit
+          back, and relax because we’ll give you a truly out of this world
+          experience!
+        </p>
+      </div>
+
+      <div>
+        <a href="#" class="large-button uppercase fm-serif text-black bg-white"
+          >Explore
+        </a>
+      </div>
     </main>
   </body>
 </html>
