Feat: Add background images to home

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <main class="grid-container grid-container--home">
       <div>
-        <h1 class="uppercase letter-spacing-1 fs-500 fm-sans-condensed">
+        <h1 class="uppercase letter-spacing-1 fm-sans-condensed">
           So, you want to travel to
           <div class="text-white fs-900 fm-serif">Space</div>
         </h1>
