--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       href="https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed:wght@400;700&family=Bellefair&display=swap"
       rel="stylesheet"
     />
+
+    <script src="scripts.js" defer></script>
   </head>
 
   <body class="home">
