Feat: Make navigation component responsive

--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
   <body class="home">
     <header class="primary-header flex">
       <div>
-        <img src="./assets/shared/logo.svg" alt="space tourism logo" />
+        <img
+          class="logo"
+          src="./assets/shared/logo.svg"
+          alt="space tourism logo"
+        />
       </div>
 
       <button
@@ -61,7 +65,7 @@
           </li>
           <li>
             <a class="uppercase text-white letter-spacing-2" href="#"
-              ><span aria-hidden="true">02</span>Technology</a
+              ><span aria-hidden="true">03</span>Technology</a
             >
           </li>
         </ul>
