Feat: Add skip to content link

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
   </head>
 
   <body class="home">
+    <a href="#main" class="skip-to-content">Skip to main content</a>
+
     <header class="primary-header flex">
       <div>
         <img
@@ -72,7 +74,7 @@
       </nav>
     </header>
 
-    <main class="grid-container grid-container--home">
+    <main id="main" class="grid-container grid-container--home">
       <div>
         <h1 class="uppercase letter-spacing-1 fm-sans-condensed">
           So, you want to travel to
