--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
             >
           </li>
           <li>
-            <a class="uppercase text-white letter-spacing-2" href="#"
+            <a
+              class="uppercase text-white letter-spacing-2"
+              href="./destination.html"
               ><span aria-hidden="true">01</span>Destination</a
             >
           </li>
