Feat: Add crew page

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             >
           </li>
           <li>
-            <a class="uppercase text-white letter-spacing-2" href="#"
+            <a class="uppercase text-white letter-spacing-2" href="./crew.html"
               ><span aria-hidden="true">02</span>Crew</a
             >
           </li>
