--- a/crew.html
+++ b/crew.html
@@ -55,13 +55,15 @@
               ><span aria-hidden="true">00</span>Home</a
             >
           </li>
-          <li class="active">
-            <a class="uppercase text-white letter-spacing-2" href="#"
+          <li>
+            <a
+              class="uppercase text-white letter-spacing-2"
+              href="./destination.html"
               ><span aria-hidden="true">01</span>Destination</a
             >
           </li>
-          <li>
-            <a class="uppercase text-white letter-spacing-2" href="./crew.html"
+          <li class="active">
+            <a class="uppercase text-white letter-spacing-2" href="#"
               ><span aria-hidden="true">02</span>Crew</a
             >
           </li>
