Fix: Change src attribute to srcset

--- a/crew.html
+++ b/crew.html
@@ -83,7 +83,7 @@
 
       <picture class="crew-image">
         <source
-          src="../assets/crew/image-douglas-hurley.webp"
+          srcset="../assets/crew/image-douglas-hurley.webp"
           type="image/webp"
         />
         <img
