--- a/destination.html
+++ b/destination.html
@@ -80,7 +80,10 @@
       </h1>
 
       <picture class="planet-image">
-        <source src="../assets/destination/image-moon.webp" type="image/webp" />
+        <source
+          srcset="../assets/destination/image-moon.webp"
+          type="image/webp"
+        />
         <img src="../assets/destination/image-moon.png" alt="the moon" />
       </picture>
 
