Fix: Point explore button to destination page

--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
       </div>
 
       <div>
-        <a href="#" class="large-button uppercase fm-serif text-black bg-white"
+        <a
+          href="./destination.html"
+          class="large-button uppercase fm-serif text-black bg-white"
           >Explore
         </a>
       </div>
