Fix: Add accessible description for dot indicators

--- a/crew.html
+++ b/crew.html
@@ -208,7 +208,11 @@
 
       <!-- end of description -->
 
-      <div class="dot-indicators flex" role="tablist">
+      <div
+        class="dot-indicators flex"
+        role="tablist"
+        aria-label="crew member list"
+      >
         <button
           aria-selected="true"
           aria-controls="commander-tab"
@@ -216,7 +220,7 @@
           tabindex="0"
           data-tab-index="0"
         >
-          <span class="sr-only">Commander</span>
+          <span class="sr-only">The Commander</span>
         </button>
         <button
           aria-selected="false"
@@ -225,7 +229,7 @@
           tabindex="-1"
           data-tab-index="1"
         >
-          <span class="sr-only">Mission Specialist</span>
+          <span class="sr-only">The Mission Specialist</span>
         </button>
         <button
           aria-selected="false"
@@ -234,7 +238,7 @@
           tabindex="-1"
           data-tab-index="2"
         >
-          <span class="sr-only">Pilot</span>
+          <span class="sr-only">The Pilot</span>
         </button>
         <button
           aria-selected="false"
@@ -243,7 +247,7 @@
           tabindex="-1"
           data-tab-index="3"
         >
-          <span class="sr-only">Flight Engineer</span>
+          <span class="sr-only">The Flight Engineer</span>
         </button>
       </div>
     </main>
