--- a/crew.html
+++ b/crew.html
@@ -69,7 +69,9 @@
             >
           </li>
           <li>
-            <a class="uppercase text-white letter-spacing-2" href="#"
+            <a
+              class="uppercase text-white letter-spacing-2"
+              href="./technology.html"
               ><span aria-hidden="true">03</span>Technology</a
             >
           </li>
