Feat: Add numbered-indicators functionality

--- a/technology.html
+++ b/technology.html
@@ -23,6 +23,7 @@
     />
 
     <script src="../scripts.js" defer></script>
+    <script src="../numbered-indicators.js" defer></script>
   </head>
 
   <body class="technology">
@@ -92,6 +93,7 @@
           aria-label="launch vehicle"
           aria-controls="launch-vehicle-tab"
           role="tab"
+          data-tab-index="0"
         >
           1
         </button>
@@ -101,6 +103,7 @@
           aria-label="spaceport"
           aria-controls="spaceport-tab"
           role="tab"
+          data-tab-index="1"
         >
           2
         </button>
@@ -110,6 +113,7 @@
           aria-label="space capsule"
           aria-controls="space-capsule-tab"
           role="tab"
+          data-tab-index="2"
         >
           3
         </button>
