Fix: Add tabindex for numbered-indicators

--- a/technology.html
+++ b/technology.html
@@ -93,6 +93,7 @@
           aria-label="launch vehicle"
           aria-controls="launch-vehicle-tab"
           role="tab"
+          tabindex="0"
           data-tab-index="0"
         >
           1
@@ -103,6 +104,7 @@
           aria-label="spaceport"
           aria-controls="spaceport-tab"
           role="tab"
+          tabindex="-1"
           data-tab-index="1"
         >
           2
@@ -113,6 +115,7 @@
           aria-label="space capsule"
           aria-controls="space-capsule-tab"
           role="tab"
+          tabindex="-1"
           data-tab-index="2"
         >
           3
